--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div style="background-color: black; height: 170px; width: 800px; display: flex;">
         	<div style="background-color: black; height: 170px; width: 170px;">
 				<img src="film1.png" style="height: 150px; width: 140px">
-				<button style="height:20px; width:80px; margin-left: 30px; background-color: orange; color: white;">смотреть</button>
+				<button style="height:20px; width:80px; margin-left: 30px; background-color: orange; color: darkred;">смотреть</button>
 			</div>
             <div style="background-color: black; height: 170px; width: 170px; margin-left: 10px;">
             	<img src="film2.png" style="height: 150px; width: 140px">
