--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <h4 style="padding-left: 320px; color: white;">В тренде: приключения</h4>
         <div style="background-color: black; height: 170px; width: 800px; display: flex;">
         	<div style="background-color: black; height: 170px; width: 170px;">
-				<img src="film1.png" style="height: 150px; width: 140px">
-				<button style="height:20px; width:80px; margin-left: 30px; background-color: orange; color: darkred;">смотреть</button>
+				<img src="film1.png" style="height: 150px; width: 140px">dar
+				<button style="height:20px; width:80px; margin-left: 30px; background-color: orange; color: write;">смотреть</button>
 			</div>
             <div style="background-color: black; height: 170px; width: 170px; margin-left: 10px;">
             	<img src="film2.png" style="height: 150px; width: 140px">
